# finagent-redteam

./: .gitignore  BOOTSTRAP_SIGNIFICANCE_TESTING.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  CONTRIBUTION_GUIDE_1.md  DATASHEET.md  README.md  RESULTS_SUMMARY.md  SECURITY.md  compute_significance.py  generate_figures.py  mkdocs.yml  pyproject.toml  run_leaderboard.py
.github/workflows/: ci.yml  docs.yml
checkpoints/: llama3.1_8b.checkpoint.json  mistral_7b.checkpoint.json  qwen3_8b.checkpoint.json
docs/: api.md  contributing.md  datasheet.md  index.md  leaderboard.md  methodology.md  threats.md
examples/: models.example.json  quickstart_ollama.md  run_local.md  sample_leaderboard.md
models/: api_models.json  free_tier.json  ollama_local.json  paper_full.json
paper/: README.md  main.tex  references.bib
paper/sections/: appendix_scenarios.tex  appendix_stats.tex  appendix_tables.tex  case_studies.tex  methodology.tex  results.tex  threats.tex
register/finagent/: eval.yaml
results/: 2026-06-01_generated-p1_1trials.json  2026-06-01_generated-p1_1trials.md  2026-06-01_generated-p2_1trials.json  2026-06-01_generated-p2_1trials.md  README.md
src/finagent_redteam/: __init__.py  cli.py  inspect_scorer.py  inspect_solver.py  inspect_task.py  inspect_tools.py  leaderboard.py  report.py  runner.py
src/finagent_redteam/agent/: __init__.py  base.py  openai_agent.py
src/finagent_redteam/eval/: __init__.py  evaluator.py  metrics.py
src/finagent_redteam/sandbox/: __init__.py  policy.py  sanctions.py  state.py  tools.py
src/finagent_redteam/scenarios/: __init__.py  builtin.py  generator.py  schema.py
tests/: test_eval.py  test_generator.py  test_inspect_integration.py  test_leaderboard.py  test_metrics_bootstrap.py  test_metrics_ci.py  test_runner.py  test_sandbox.py  test_threats.py
